# Feedback-Analysis

./: .gitignore  2026-04-24T10-29_export.csv  CLAUDE.md  Feedback-Analysis.code-workspace  classified_all_feedbacks.json  combined_islam360_feedbacks.xlsx  pyproject.toml  requirements.txt
app/: streamlit_app.py
notebooks/: 01_eda.ipynb
scripts/: build_eda_notebook.py  build_issue_metrics.py  spotcheck_neighbors.py
src/feedback/: Feedback-Analysis.code-workspace  __init__.py  cluster.py  eda.py  embed.py  ingest.py  label.py  normalize.py  prioritize.py
tests/: test_prioritize.py
